browse assets filter button alignment fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -458,9 +458,12 @@ footer {
     display: none;
 }
 #assets-filter {
-    width: 100%;
+    width: 60%;
     @media(min-width: 750px) {
         width: 60%;
+    }
+    @media(min-width: 960px) {
+        width: 45%;
     }
     margin: 0 auto;
     text-align: center;
